--- a/index.html
+++ b/index.html
@@ -6,10 +6,110 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!--google font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://kit.fontawesome.com/b6092f6d28.js" crossorigin="anonymous"></script>
     <title>Viajes Chile</title>
+    <link rel="stylesheet" href="assets/css/estilos.css">
 </head>
 <body>
     
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+        <div class="container text-light">
+            <a class="navbar-brand text-light" href="#">
+                <img src="assets/img/viajes.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+                Viajes Chile
+              </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link text-light" href="#inicio">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-light" href="#QuienesSomos">Quienes Somos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-light" href="#">Destacados</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-light" href="#noticias">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+    </nav>
+
+    <header class="header" id="inicio">
+          <!-- carrusel -->
+        <div class="container-fluid">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="assets/img/carousel1.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/img/carousel2.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/img/carousel3.jpg" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+    </header>
+
+    <section id="QuienesSomos">
+        <div class="container-fluid text-light">
+            <div class="pt-5 bg-black">
+                <h1 class="font-uppercase text-center" >Quienes Somos</h1>
+                <hr class="mx-auto opacity-100">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <div class="w-100 bg-info text-center">
+                                <i class="fa-solid fa-plane"></i>
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, soluta quae sunt repellendus similique consequuntur, tempore distinctio dolorem voluptatum nobis alias rerum aperiam voluptates maiores consectetur quidem. At, dignissimos veritatis? 
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, velit sed voluptas aliquam id explicabo minus, eveniet minima maxime iusto illum tempora animi praesentium odio at repellendus, consectetur natus expedita.
+                            </p>                            
+                        </div>
+                        <div class="col-sm-4">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, soluta quae sunt repellendus similique consequuntur, tempore distinctio dolorem voluptatum nobis alias rerum aperiam voluptates maiores consectetur quidem. At, dignissimos veritatis? 
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis repellendus repellat ex, sint velit dolor! Vero eaque aut quas quo? A doloribus, necessitatibus ipsam assumenda est autem laudantium laborum maxime!
+                            </p>
+                            <div class="w-100 bg-info text-center">
+                                <i class="fa-solid fa-mountain"></i> 
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="w-100 bg-info text-center">
+                                <i class="fa-solid fa-route"></i>
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, soluta quae sunt repellendus similique consequuntur, tempore distinctio dolorem voluptatum nobis alias rerum aperiam voluptates maiores consectetur quidem. At, dignissimos veritatis? 
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut debitis, aperiam incidunt nulla nemo libero, nostrum corporis corrupti placeat accusantium voluptates ad possimus quidem dolores exercitationem. Molestias voluptatibus ducimus aliquam?
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
