--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                 <a class="nav-link text-light" href="#QuienesSomos">Quienes Somos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="#">Destacados</a>
+                <a class="nav-link text-light" href="#destacado">Destacados</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="#noticias">Contacto</a>
+                <a class="nav-link text-light" href="#Contacto">Contacto</a>
               </li>
             </ul>
           </div>
@@ -109,6 +109,53 @@
             </div>
         </div>
     </section>
+    
+    <section id="destacado">
+        <div class="container-fluid">
+            <div class="pt-5 bg-black">
+                <h1 class="font-uppercase text-center text-light">Destacados</h1>
+                <hr class="mx-auto">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-3 pt-3">
+                            <div class="card text-white bg-primary mb-3" style="width: 18rem;">
+                                <img src="assets/img/card1.jpg" class="card-img-top" alt="..." height="190px">
+                                <div class="card-body">
+                                  <p class="card-text">Mus enim elementum dignissim class eleifend justo, ut nunc magnis est vulputate nostra, blandit erat luctus faucibus orci.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-3 pt-3">
+                            <div class="card text-white bg-primary mb-3" style="width: 18rem;">
+                                <img src="assets/img/card2.jpg" class="card-img-top" alt="..." height="190px">
+                                <div class="card-body">
+                                  <p class="card-text">Mus enim elementum dignissim class eleifend justo, ut nunc magnis est vulputate nostra, blandit erat luctus faucibus orci.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-3 pt-3">
+                            <div class="card text-white bg-primary mb-3" style="width: 18rem;">
+                                <img src="assets/img/card3.jpg" class="card-img-top" alt="..." height="190px">
+                                <div class="card-body">
+                                  <p class="card-text">Mus enim elementum dignissim class eleifend justo, ut nunc magnis est vulputate nostra, blandit erat luctus faucibus orci.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-3 pt-3">
+                            <div class="card text-white bg-primary mb-3" style="width: 18rem;">
+                                <img src="assets/img/card4.jpg" class="card-img-top" alt="..." height="190px">
+                                <div class="card-body">
+                                  <p class="card-text">Mus enim elementum dignissim class eleifend justo, ut nunc magnis est vulputate nostra, blandit erat luctus faucibus orci.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
