--- a/index.html
+++ b/index.html
@@ -155,6 +155,33 @@
         </div>
     </section>
 
+    <section id="Contacto">
+        <div class="container-fluid">
+            <div class="pt-5 bg-black">
+                <h1 class="font-uppercase text-center text-light">Contacto</h1>
+                <hr class="mx-auto">
+                <div class="container">
+                    <form>
+                        <div class="mb-3">
+                          <label for="exampleInputEmail1" class="form-label text-light">Nombre</label>
+                          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        </div>
+                        <div class="mb-3">
+                          <label for="exampleInputPassword1" class="form-label text-light">Asunto</label>
+                          <input type="password" class="form-control" id="exampleInputPassword1">
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleInputPassword1" class="form-label text-light">Mensaje</label>
+                            <input type="password" class="form-control" id="exampleInputPassword1">
+                          </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                      </form>
+                      <br>
+                </div>
+            </div>   
+        </div>
+    </section>
+    
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
