--- a/index.html
+++ b/index.html
@@ -183,6 +183,21 @@
     </section>
     
 
+    <footer id="fopter" class="text-center text-white py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-sm-6">
+                    <h3>Viajes Chile</h3>
+                </div>
+                <div class="col-12 col-sm-6">
+                    <a href="#"><i class="fa-brands fa-github fa-2x"></i></a>
+                    <a href="#"></a><i class="fa-brands fa-instagram-square fa-2x"></i></a>
+                    <a href="#"></a><i class="fa-brands fa-twitter-square fa-2x"></i></a>
+                    <a href="#"></a><i class="fa-brands fa-facebook-square fa-2x"></i></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
