--- a/index.html
+++ b/index.html
@@ -164,17 +164,17 @@
                     <form>
                         <div class="mb-3">
                           <label for="exampleInputEmail1" class="form-label text-light">Nombre</label>
-                          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                          <input type="text" class="form-control" id="exampleInputEmail1">
                         </div>
                         <div class="mb-3">
                           <label for="exampleInputPassword1" class="form-label text-light">Asunto</label>
-                          <input type="password" class="form-control" id="exampleInputPassword1">
+                          <input type="text" class="form-control" id="exampleInputPassword1">
                         </div>
                         <div class="mb-3">
                             <label for="exampleInputPassword1" class="form-label text-light">Mensaje</label>
-                            <input type="password" class="form-control" id="exampleInputPassword1">
+                            <input type="text" class="form-control" id="exampleInputPassword1">
                           </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" id="submit" class="btn btn-primary">Submit</button>
                       </form>
                       <br>
                 </div>
@@ -183,24 +183,35 @@
     </section>
     
 
-    <footer id="fopter" class="text-center text-white py-5">
+    <footer id="footer" class="container-fluid text-center text-white  ">
+      <div class="bg-primary py-3">
         <div class="container">
-            <div class="row">
-                <div class="col-12 col-sm-6">
-                    <h3>Viajes Chile</h3>
-                </div>
-                <div class="col-12 col-sm-6">
-                    <a href="#"><i class="fa-brands fa-github fa-2x"></i></a>
-                    <a href="#"></a><i class="fa-brands fa-instagram-square fa-2x"></i></a>
-                    <a href="#"></a><i class="fa-brands fa-twitter-square fa-2x"></i></a>
-                    <a href="#"></a><i class="fa-brands fa-facebook-square fa-2x"></i></a>
-                </div>
-            </div>
+          <div class="row">
+              <div class="col-12 col-sm-6">
+                  <h3>Viajes Chile</h3>
+              </div>
+              <div class="col-12 col-sm-6">
+                  <a href="#"><i class="fa-brands fa-github fa-2x mx-2"></i></a>
+                  <a href="#"><i class="fa-brands fa-instagram-square fa-2x mx-2"></i></a>
+                  <a href="#"><i class="fa-brands fa-twitter-square fa-2x mx-2"></i></a>
+                  <a href="#"><i class="fa-brands fa-facebook-square fa-2x mx-2"></i></a>
+              </div>
+          </div>
         </div>
+      </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+      $(document).ready(
+
+          $("#submit").click(function(){
+             alert("enviado correctamente...");
+          }),
+
+      );
+    </script>
 </body>
 </html>
