commit 7 correccion de color y textarea

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-3 pt-3">
-                            <div class="card text-white bg-primary mb-3" style="width: 18rem;">
+                            <div class="card text-white bg-info  mb-3" style="width: 18rem;">
                                 <img src="assets/img/card1.jpg" class="card-img-top" alt="..." height="190px">
                                 <div class="card-body">
                                   <p class="card-text">Mus enim elementum dignissim class eleifend justo, ut nunc magnis est vulputate nostra, blandit erat luctus faucibus orci.</p>
@@ -126,7 +126,7 @@
                             </div>
                         </div>
                         <div class="col-3 pt-3">
-                            <div class="card text-white bg-primary mb-3" style="width: 18rem;">
+                            <div class="card text-white bg-info  mb-3" style="width: 18rem;">
                                 <img src="assets/img/card2.jpg" class="card-img-top" alt="..." height="190px">
                                 <div class="card-body">
                                   <p class="card-text">Mus enim elementum dignissim class eleifend justo, ut nunc magnis est vulputate nostra, blandit erat luctus faucibus orci.</p>
@@ -134,7 +134,7 @@
                             </div>
                         </div>
                         <div class="col-3 pt-3">
-                            <div class="card text-white bg-primary mb-3" style="width: 18rem;">
+                            <div class="card text-white bg-info  mb-3" style="width: 18rem;">
                                 <img src="assets/img/card3.jpg" class="card-img-top" alt="..." height="190px">
                                 <div class="card-body">
                                   <p class="card-text">Mus enim elementum dignissim class eleifend justo, ut nunc magnis est vulputate nostra, blandit erat luctus faucibus orci.</p>
@@ -142,7 +142,7 @@
                             </div>
                         </div>
                         <div class="col-3 pt-3">
-                            <div class="card text-white bg-primary mb-3" style="width: 18rem;">
+                            <div class="card text-white bg-info  mb-3" style="width: 18rem;">
                                 <img src="assets/img/card4.jpg" class="card-img-top" alt="..." height="190px">
                                 <div class="card-body">
                                   <p class="card-text">Mus enim elementum dignissim class eleifend justo, ut nunc magnis est vulputate nostra, blandit erat luctus faucibus orci.</p>
@@ -172,9 +172,9 @@
                         </div>
                         <div class="mb-3">
                             <label for="exampleInputPassword1" class="form-label text-light">Mensaje</label>
-                            <input type="text" class="form-control" id="exampleInputPassword1">
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
                           </div>
-                        <button type="submit" id="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" id="submit" class="btn btn-info">Submit</button>
                       </form>
                       <br>
                 </div>
@@ -184,7 +184,7 @@
     
 
     <footer id="footer" class="container-fluid text-center text-white  ">
-      <div class="bg-primary py-3">
+      <div class="bg-info py-3">
         <div class="container">
           <div class="row">
               <div class="col-12 col-sm-6">
